--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,16 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-
+    <header>
+       <include src="./partials/header.html"></include>
+    </header>
+   <main>
+    <include src="./partials/main.html"></include>
+   </main>
+   <footer>
+    <include src="./partials/footer.html"></include>
+   </footer>
+   <include src="./partials/modal.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
