--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,11 @@
     <include src="./partials/modal.html"></include>
 
     <include src="./partials/trailer-modal.html"></include>
+
+    <include src="./partials/snow.html"></include>
+    
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <!-- <script src="./js/snow.js"></script> -->
   </body>
 </html>
