--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="light">
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
     <include src="./partials/header.html"></include>
@@ -33,7 +33,7 @@
 
     <include src="./partials/trailer-modal.html"></include>
 
-    <include src="./partials/snow.html"></include>
+    <!-- <include src="./partials/snow.html"></include> -->
  
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
