--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
     <include src="./partials/trailer-modal.html"></include>
 
-    <!-- <include src="./partials/snow.html"></include> -->
+    <include src="./partials/snow.html"></include>
  
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
