--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
     <include src="./partials/modal.html"></include>
 
     <include src="./partials/trailer-modal.html"></include>
+
+    <include src="./partials/about-us.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
