--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
     <include src="./partials/about-us.html"></include>
 
-    <include src="./partials/snow.html"></include>
+    <!-- <include src="./partials/snow.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
