--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   </head>
 
   <body class="light">
