--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   </head>
 
-  <body class="light">
+  <body id="swiper-fix" class="light">
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
