--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
 
     <include src="./partials/about-us.html"></include>
 
-    <!-- <include src="./partials/snow.html"></include> -->
+     <include src="./partials/snow.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <!-- <script src="./js/snow.js"></script> -->
+<!--     <script src="./js/snow.js"></script>-->
   </body>
 </html>
